--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
   </head>
   <body>
-    <canvas id="canvas1"></canvas>
-    <script src="script.js"></script>
+    <canvas id="gameCanvas"></canvas>
+    <script src="./js/classes/player.js"></script>
+    <script src="./js/classes/invader.js"></script>
+    <script src="./js/classes/shield.js"></script>
+    <script src="./js/classes/shield.js"></script>
+    <script src="./js/classes/game.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
