Add js files for encapsulation and exports

--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Invaders!</title>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <canvas id="gameCanvas"></canvas>
-    <script src="./js/classes/player.js"></script>
-    <script src="./js/classes/invader.js"></script>
-    <script src="./js/classes/shield.js"></script>
-    <script src="./js/classes/shield.js"></script>
-    <script src="./js/classes/game.js"></script>
-    <script src="./js/main.js"></script>
+    <canvas id="gameCanvas"> </canvas>
+    <script src="./js/classes/Bullets.js" type="module"></script>
+    <script src="./js/classes/Canvas.js" type="module"></script>
+    <script src="./js/classes/Game.js" type="module"></script>
+    <script src="./js/classes/Invader.js" type="module"></script>
+    <script src="./js/classes/Player.js" type="module"></script>
+    <script src="./js/classes/Shield.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
