--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <canvas id="gameCanvas"> </canvas>
+    <div class="canvas-wrapper">
+      <canvas id="gameCanvas"></canvas>
+    </div>
     <script src="./js/classes/Bullets.js" type="module"></script>
     <script src="./js/classes/Canvas.js" type="module"></script>
-    <script src="./js/classes/Game.js" type="module"></script>
+    <script src="./js/classes/Canvas.js" type="module"></script>
     <script src="./js/classes/Invader.js" type="module"></script>
     <script src="./js/classes/Player.js" type="module"></script>
     <script src="./js/classes/Shield.js" type="module"></script>
