Add resized canvas

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="canvas-wrapper">
-      <canvas id="gameCanvas"></canvas>
+      <canvas id="gameCanvas" width="900" height="700"></canvas>
     </div>
     <script src="./js/classes/Bullets.js" type="module"></script>
     <script src="./js/classes/Canvas.js" type="module"></script>
