--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="canvas-wrapper">
       <canvas id="gameCanvas" width="900" height="700"></canvas>
+      <button id="startButton">PRESS ENTER</button>
     </div>
     <script src="./js/classes/Bullets.js" type="module"></script>
     <script src="./js/classes/Canvas.js" type="module"></script>
@@ -15,6 +16,7 @@
     <script src="./js/classes/Invader.js" type="module"></script>
     <script src="./js/classes/Player.js" type="module"></script>
     <script src="./js/classes/Shield.js" type="module"></script>
+    <script src="./js/classes/StartScreen.js" type="module"></script>
     <script src="./js/main.js" type="module"></script>
   </body>
 </html>
