Add projectiles appearing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <script src="./js/classes/Bullets.js" type="module"></script>
+    <script src="./js/classes/Projectiles.js" type="module"></script>
     <script src="./js/classes/Canvas.js" type="module"></script>
     <script src="./js/classes/Canvas.js" type="module"></script>
     <script src="./js/classes/Invader.js" type="module"></script>
