--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>Invaders!</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <div class="canvas-wrapper">
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <!-- <script src="./js/classes/Projectiles.js" type="module"></script>
-    <script src="./js/classes/Canvas.js" type="module"></script>
-    <script src="./js/classes/Canvas.js" type="module"></script>
-    <script src="./js/classes/Invader.js" type="module"></script>
-    <script src="./js/classes/Player.js" type="module"></script>
-    <script src="./js/classes/Shield.js" type="module"></script>
-    <script src="./js/classes/StartScreen.js" type="module"></script> -->
-    <script src="./js/main.js" type="module"></script>
+    <script src="/js/classes/Projectiles.js" type="module"></script>
+    <script src="/js/classes/Canvas.js" type="module"></script>
+    <script src="/js/classes/Invaders.js" type="module"></script>
+    <script src="/js/classes/Player.js" type="module"></script>
+    <script src="/js/classes/Shield.js" type="module"></script>
+    <script src="/js/classes/StartScreen.js" type="module"></script>
+    <script src="/js/classes/Game.js" type="module"></script>
+    <script src="/js/main.js" type="module"></script>
   </body>
 </html>
