Add correct file paths for hosting attempt 2

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <script src="/js/classes/Projectiles.js" type="module"></script>
-    <script src="/js/classes/Canvas.js" type="module"></script>
-    <script src="/js/classes/Invaders.js" type="module"></script>
-    <script src="/js/classes/Player.js" type="module"></script>
-    <script src="/js/classes/Shield.js" type="module"></script>
-    <script src="/js/classes/StartScreen.js" type="module"></script>
-    <script src="/js/classes/Game.js" type="module"></script>
+    <script src="/js/classes/sprite.js" type="module"></script>
+    <script src="/js/classes/projectiles.js" type="module"></script>
+    <script src="/js/classes/canvas.js" type="module"></script>
+    <script src="/js/classes/invaders.js" type="module"></script>
+    <script src="/js/classes/invaders-grid.js" type="module"></script>
+    <script src="/js/classes/player.js" type="module"></script>
+    <script src="/js/classes/shield.js" type="module"></script>
+    <script src="/js/classes/startscreen.js" type="module"></script>
+    <script src="/js/classes/game.js" type="module"></script>
     <script src="/js/main.js" type="module"></script>
   </body>
 </html>
