--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <title>Invaders!</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <div class="canvas-wrapper">
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <script src="/js/classes/sprite.js" type="module"></script>
-    <script src="/js/classes/projectiles.js" type="module"></script>
-    <script src="/js/classes/canvas.js" type="module"></script>
-    <script src="/js/classes/invaders.js" type="module"></script>
-    <script src="/js/classes/invaders-grid.js" type="module"></script>
-    <script src="/js/classes/player.js" type="module"></script>
-    <script src="/js/classes/shield.js" type="module"></script>
-    <script src="/js/classes/startscreen.js" type="module"></script>
-    <script src="/js/classes/game.js" type="module"></script>
-    <script src="/js/main.js" type="module"></script>
+    <script src="./js/classes/sprite.js" type="module"></script>
+    <script src="./js/classes/projectiles.js" type="module"></script>
+    <script src="./js/classes/canvas.js" type="module"></script>
+    <script src="./js/classes/invaders.js" type="module"></script>
+    <script src="./js/classes/invaders-grid.js" type="module"></script>
+    <script src="./js/classes/player.js" type="module"></script>
+    <script src="./js/classes/shield.js" type="module"></script>
+    <script src="./js/classes/startscreen.js" type="module"></script>
+    <script src="./js/classes/game.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
