Add build to make es6 modules work with Pages

--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <script src="./js/classes/sprite.js" type="module"></script>
-    <script src="./js/classes/projectiles.js" type="module"></script>
-    <script src="./js/classes/canvas.js" type="module"></script>
-    <script src="./js/classes/invaders.js" type="module"></script>
-    <script src="./js/classes/invaders-grid.js" type="module"></script>
-    <script src="./js/classes/player.js" type="module"></script>
-    <script src="./js/classes/shield.js" type="module"></script>
-    <script src="./js/classes/startscreen.js" type="module"></script>
-    <script src="./js/classes/game.js" type="module"></script>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
