Add module type

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
     </div>
-    <script src="./dist/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
