Add attempted restarts without page reload

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="canvas-wrapper">
       <canvas id="gameCanvas" width="900" height="700"></canvas>
       <button id="startButton">PRESS ENTER</button>
+      <button id="restartButton" class="hidden">RESTART</button>
     </div>
     <script src="./js/main.js" type="module"></script>
   </body>
